--- a/index.html
+++ b/index.html
@@ -894,11 +894,11 @@ button {
 
 .action-area.active .add-btn {
     display: none;
+/*
+.action-area.active .add-btn {
+    display: none;
 }
-
-.action-area.active .qty-control {
-    display: flex;
-}
+*/
   .products-grid {
     display: grid;
     grid-template-columns: 1fr;
