--- a/index.html
+++ b/index.html
@@ -2130,6 +2130,21 @@ h2 {
     font-size: 16px;
     font-weight: 600;
 }
+  .seed-table {
+    width: 100%;
+    margin-top: 16px;
+    border-collapse: collapse;
+    font-size: 14px;
+}
+
+.seed-table td {
+    padding: 8px 6px;
+    border-bottom: 1px solid rgba(255,255,255,0.08);
+}
+
+.seed-table tr:last-child td {
+    border-bottom: none;
+}
 
 </style>
 </head>
@@ -2896,102 +2911,280 @@ Kratom Tea — это насыщенный травяной напиток с г
     "Автоцветущие": [
 
         {
-            name: "Orange Creampop Auto",
-            price: 2500,
+            name: "Семена сорта Z-Up Auto, Феминизированные, Автоцветущие, ТГК-29",
+            price: 3550,
             images: [
                 "/rose_seeds/auto/auto_1_1.jpg",
                 "/rose_seeds/auto/auto_1_2.jpg",
                 "/rose_seeds/auto/auto_1_3.jpg"
             ],
             description: `
-<strong>Orange Creampop Auto</strong>
+<strong>Z-Up Auto</strong>
 
-Коллекционная генетическая линия с ярким цитрусовым профилем.
+<strong>Выращивание и урожайность</strong> 🌿✨
 
-🌱 Тип: Автоцветущий  
-📦 Упаковка: 3 семени  
+Z-Up Auto — находка для гровера, который ценит быстрый результат и минимум хлопот. Всего 8–9 недель цветения — и куст покрывается плотными, липкими и ароматными шишками 🍋💎
 
-Предназначено для коллекционных целей.
+🌞 <strong>Аутдор — просто и выгодно</strong>
+
+Выберите солнечное, уединённое место — и получите до 300 г сухого урожая с растения. Сорт не требует обильного питания: качественно подготовленной органической почвы достаточно для мощного роста.  
+Аромат яркий и необычный — с кисло-цитрусовыми нотами 🍊  
+Предпочитает стабильное тепло без резких перепадов температур.
+
+💡 <strong>Индор — компактность и продуктивность</strong>
+
+Высота кустов 70–120 см, легко контролируется подгибанием.  
+
+<strong>Оптимальный климат:</strong>  
+🌡 22–28 °C  
+💧 до 70% на веге и ~45% на цветении  
+
+Урожайность в помещении достигает 450–600 г/м² всего за 2,5 месяца цикла 🚀
+
+🎨 <strong>Визуальный эффект</strong>
+
+Бутоны переливаются изумрудными, лимонными и пурпурными оттенками — настоящий живой арт-объект.
+
+Z-Up Auto — это скорость, красота и щедрый результат в компактном формате 🌿🔥
 `
         },
 
         {
-            name: "Gelato Auto",
-            price: 2400,
+            name: "Семена сорта Lemon Cherry Cookies, Феминизированные, Автоцветущие, ТГК-28.5",
+            price: 3850,
             images: [
                 "/rose_seeds/auto/auto_2_1.jpg",
                 "/rose_seeds/auto/auto_2_2.jpg",
                 "/rose_seeds/auto/auto_2_3.jpg"
             ],
             description: `
-<strong>Gelato Auto</strong>
+<strong>Lemon Cherry Cookies Auto</strong> 🍒🍋
 
-Сбалансированная коллекционная линия с кремово-десертным ароматом.
+Этот автоцвет — отличный выбор как для новичков, так и для опытных гроверов. Неприхотливый характер и стабильный рост делают его максимально удобным в культивации 🌿
 
-🌱 Тип: Автоцветущий  
-📦 Упаковка: 3 семени  
+📏 <strong>Компактность и маскировка</strong>
 
-Подходит для коллекционирования.
+В индоре кусты редко превышают 100 см — идеальный вариант для стелс-гровинга.  
+В аутдоре высота достигает 100–120 см.
+
+Пурпурные оттенки бутонов гармонично сочетаются с декоративными культурами, а прохладная погода усиливает глубину цвета 💜
+
+💎 <strong>Цветение и урожай</strong>
+
+С началом цветения куст покрывается плотными, крупными соцветиями, щедро усыпанными кристаллами. Издалека шишки напоминают виноградные гроздья 🍇  
+Фиолетовые чашечки и светло-зеленые листья создают выразительный контраст.
+
+<br>
+
+<table class="seed-table">
+<tr>
+<td><strong>Тип</strong></td>
+<td>Автоцветущий</td>
+</tr>
+<tr>
+<td><strong>Высота (индор)</strong></td>
+<td>до 100 см</td>
+</tr>
+<tr>
+<td><strong>Высота (аутдор)</strong></td>
+<td>100–120 см</td>
+</tr>
+<tr>
+<td><strong>Урожайность</strong></td>
+<td>450–550 г/м²</td>
+</tr>
+<tr>
+<td><strong>Полный цикл</strong></td>
+<td>около 8 недель</td>
+</tr>
+</table>
+
+🌤 Отличный вариант для аутдора в умеренном климате — быстро, красиво и результативно.
 `
         },
 
         {
-            name: "Wedding Cake Auto",
-            price: 2600,
+            name: "Семена сорта Bubba Cookies Страны Европы, Феминизированные, Автоцветущие, ТГК-28",
+            price: 5100,
             images: [
                 "/rose_seeds/auto/auto_3_1.jpg",
                 "/rose_seeds/auto/auto_3_2.jpg",
                 "/rose_seeds/auto/auto_3_3.jpg"
             ],
             description: `
-<strong>Wedding Cake Auto</strong>
+<strong>Bubba Cookies Auto</strong> 🍪🔥
 
-Коллекционный сорт с насыщенным сладким профилем.
+Bubba Cookies Auto — феминизированный гибрид, объединивший легендарную олдскульную генетику Bubba Pre 98 и калифорнийский хит Cookies Auto. В результате получился мощный, смолистый и невероятно ароматный автоцвет для гроверов любого уровня 🌿
 
-🌱 Тип: Автоцветущий  
-📦 Упаковка: 3 семени  
+⚡ <strong>Быстро и щедро</strong>
 
-Создан для коллекционных целей.
+Главная особенность сорта — впечатляющий урожай при сверхбыстром созревании.  
+⏳ Всего 7–8 недель от посадки до сбора.
+
+🌱 <strong>Рост и устойчивость</strong>
+
+Среднерослый, пышный куст с мощным стеблем и развитой корневой системой.  
+Гибрид устойчив к плесени, вредителям и стрессам, отлично чувствует себя в индоре, аутдоре, теплице и гидропонике.
+
+Смоляной покров не только впечатляет визуально, но и служит дополнительной защитой 💎
+
+📈 <strong>Особенности развития</strong>
+
+При переходе на цветение происходит активный скачок роста — за 1–2 недели куст может прибавить 35–50 % финальной высоты.  
+Хорошо реагирует на LST, подвязывание и ScrOG.  
+Жесткие методы тренировки применять не рекомендуется, чтобы не замедлять цикл.
+
+👃 <strong>Аромат</strong>
+
+Запах появляется уже на веге, а к финишу становится насыщенным и интенсивным.  
+Для индора рекомендуется угольный фильтр.
+
+<br>
+
+<table class="seed-table">
+<tr>
+<td><strong>Тип</strong></td>
+<td>Автоцветущий</td>
+</tr>
+<tr>
+<td><strong>Полный цикл</strong></td>
+<td>7–8 недель</td>
+</tr>
+<tr>
+<td><strong>Урожайность (индор)</strong></td>
+<td>500–600 г/м²</td>
+</tr>
+<tr>
+<td><strong>Урожайность (аутдор)</strong></td>
+<td>150–300 г с растения</td>
+</tr>
+<tr>
+<td><strong>Устойчивость</strong></td>
+<td>Плесень, вредители, стресс</td>
+</tr>
+</table>
+
 `
         },
 
         {
-            name: "Gorilla Glue Auto",
-            price: 2550,
+            name: "Семена сорта Guava Auto fem (FastBuds) США, Феминизированные, Автоцветущие, ТГК-28",
+            price: 5400,
             images: [
                 "/rose_seeds/auto/auto_4_1.jpg",
                 "/rose_seeds/auto/auto_4_2.jpg",
                 "/rose_seeds/auto/auto_4_3.jpg"
             ],
             description: `
-<strong>Gorilla Glue Auto</strong>
+<strong>Guava Auto</strong> 🥭🌿
 
-Мощная коллекционная генетика с плотной структурой.
+Guava Auto — компактный и удобный автоцвет, который отлично чувствует себя при любом способе культивации. При правильном уходе кусты вырастают до 70–120 см, формируя аккуратную ветвистую крону с минимальным количеством листвы — максимум света для соцветий и максимум результата 💡
 
-🌱 Тип: Автоцветущий  
-📦 Упаковка: 3 семени  
+Благодаря стремительному росту сорт прекрасно подходит для ScrOG, позволяя получить до 450–550 г/м² в индоре 🔥
 
-Только для коллекции.
+⏳ При световом режиме 18–20 часов полное созревание наступает уже на 8–9 неделе цикла.  
+В аутдоре может потребоваться немного больше времени, однако крепкий иммунитет к плесени, вредителям и перепадам температур делает сорт надежным даже в умеренном климате 🌤
+
+🍪🥭 <strong>Вкус и аромат</strong>
+
+Guava Auto — настоящий терпеновый монстр. Во время измельчения соцветий помещение наполняется сливочно-тропическим ароматом спелой гуавы с легкой сладостью.  
+Во вкусе — экзотический коктейль с мягкими кремовыми оттенками и тонкими нотками печенья. На выдохе сладость раскрывается еще ярче, оставляя фруктовое послевкусие.
+
+✨ <strong>Эффект</strong>
+
+Эффект бодрящий и мотивирующий: помогает прояснить мысли, улучшает настроение и наполняет энергией.  
+Мягко расслабляет тело, не вызывая сонливости и тяжести — отличный вариант для любого времени суток 🌞🌙
+
+<br>
+
+<table class="seed-table">
+<tr>
+<td><strong>Тип</strong></td>
+<td>Автоцветущий</td>
+</tr>
+<tr>
+<td><strong>Высота</strong></td>
+<td>70–120 см</td>
+</tr>
+<tr>
+<td><strong>Полный цикл</strong></td>
+<td>8–9 недель</td>
+</tr>
+<tr>
+<td><strong>Урожайность (индор)</strong></td>
+<td>450–550 г/м²</td>
+</tr>
+<tr>
+<td><strong>Устойчивость</strong></td>
+<td>Плесень, вредители, перепады температур</td>
+</tr>
+</table>
+
+Guava Auto — тропическое настроение, яркий вкус и стабильный результат в компактном формате 🌿🥭
+
 `
         },
 
         {
-            name: "Zkittlez Auto",
-            price: 2450,
+            name: "Семена сорта Zkittlez Auto fem Страны Европы, Феминизированные, Автоцветущие, ТГК-24",
+            price: 4150,
             images: [
                 "/rose_seeds/auto/auto_5_1.jpg",
                 "/rose_seeds/auto/auto_5_2.jpg",
                 "/rose_seeds/auto/auto_5_3.jpg"
             ],
             description: `
-<strong>Zkittlez Auto</strong>
+<strong>Zkittlez Auto fem</strong> 🍬🍓
 
-Коллекционный сорт с фруктовым ароматическим профилем.
+Zkittlez Auto — сладкий десертный гибрид с преобладанием индики (80% indica / 20% sativa). Один из самых ароматных автоцветов, способный покорить насыщенным вкусом и эффектной внешностью 🌿
 
-🌱 Тип: Автоцветущий  
-📦 Упаковка: 3 семени  
+🌱 <strong>Генетика и внешний вид</strong>
 
-Для коллекционных целей.
+Сорт создан на основе оригинального Zkittlez и рудералиса, от которого получил крепкий иммунитет и неприхотливость.  
+Куст компактный, плотный, высотой 70–100 см, с массивной кроной и продолговатыми шишками — характерный «кушевский» силуэт заметен сразу 💚
+
+🍫🍇 <strong>Аромат</strong>
+
+Во время цветения пространство наполняется шоколадными нотами, а к харвесту аромат раскрывается сладкой ягодно-конфетной палитрой — яркой и интенсивной.  
+⚠ В индоре рекомендуется использовать угольный фильтр.
+
+⏳ <strong>Скорость и урожай</strong>
+
+Жизненный цикл — всего 9–10 недель от посадки.  
+Компактные размеры делают сорт удобным для гроубокса, а высокая устойчивость и простота в уходе позволяют рекомендовать его даже новичкам.
+
+<br>
+
+<table class="seed-table">
+<tr>
+<td><strong>Тип</strong></td>
+<td>Автоцветущий (80% indica / 20% sativa)</td>
+</tr>
+<tr>
+<td><strong>Высота</strong></td>
+<td>70–100 см</td>
+</tr>
+<tr>
+<td><strong>Полный цикл</strong></td>
+<td>9–10 недель</td>
+</tr>
+<tr>
+<td><strong>Урожайность (индор)</strong></td>
+<td>400–600 г/м²</td>
+</tr>
+<tr>
+<td><strong>Урожайность (аутдор)</strong></td>
+<td>100–300 г с растения</td>
+</tr>
+<tr>
+<td><strong>Устойчивость</strong></td>
+<td>Плесень, вредители, стресс</td>
+</tr>
+</table>
+
+Zkittlez Auto — сладкий аромат, мощная генетика и стабильный результат в компактном формате 🍬🔥
+
+Предназначено исключительно для коллекционных целей.
 `
         }
     ],
